# rs-game-engine

./: Cargo.toml  README.md  build.release.bat
src/: config.rs  init.rs  main.rs
src/game/: application.rs  events.rs  game.rs  mod.rs
src/game/actor/: enemy.rs  mod.rs  mouse_state.rs  player.rs
src/game/actor/enemy/: kind.rs  mod.rs
src/game/debug/: console.rs
src/game/map/: mod.rs
src/game/nodes/: attack.rs  mod.rs  movement.rs
src/input/: button.rs  input_system.rs  mod.rs  mouse.rs
src/render/: mod.rs  sdl_wrapper.rs  sprite.rs  texture_map.rs
src/render/actors/: enemies.rs  mod.rs  player.rs
src/render/debug/: mod.rs
src/render/map/: mod.rs
src/render/nodes/: attack.rs  mod.rs  movement.rs
src/render/renderable/: mod.rs  render_rect.rs  render_sprite.rs  render_text.rs
src/update/: mod.rs  pathfinder.rs
src/update/debug/: console.rs  mod.rs
src/update/nodes/: attack.rs  mod.rs  movement.rs
src/update/player/: mod.rs  mouse_state.rs
src/utils/: clamp.rs  debug.rs  delayed_vec2.rs  direction.rs  events.rs  matrix.rs  mod.rs  nd_iter.rs  pathfinder.rs  prqueue.rs  rect.rs  vector2.rs
