[package]
name = "rs-baby-engine"
version = "0.1.0"
authors = ["Luminight <balazscsabai98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image"]